--- a/rpm/libtirpc.yaml
+++ b/rpm/libtirpc.yaml
@@ -1,6 +1,6 @@
 Name: libtirpc
 Summary: Transport Independent RPC library (SunRPC replacement)
-Version: 1.3.3_rc1
+Version: 1.3.3
 Release: 0
 Group: Development/Libraries
 License: GPLv2
@@ -23,6 +23,8 @@ Description: |
 PkgBR:
   - autoconf
   - automake
+Patches:
+  - 1.3.3-rc1.diff
 SetupOptions: -q -n %{name}-%{version}/upstream
 ConfigOptions:
   - '--with-gnu-ld'
